force-app/main/default/objects/Case/fields/NS_NoOfTimesCaseReleased__c.field-meta.xml
<CustomField>
    <fullName>NS_NoOfTimesCaseReleased__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Incerements by1</description>
    <label>No Of Times Case Released</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>