force-app/main/default/objects/Case/fields/NS_OEM_Account__c.field-meta.xml
<CustomField>
    <fullName>NS_OEM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OEM / Port</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (OEM Account)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>