force-app/main/default/objects/Case/fields/NS_Off_Hours_CheckBox__c.field-meta.xml
<CustomField>
    <fullName>NS_Off_Hours_CheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is &#39;CHECKED&#39; if the Case record is created during weekends or before/after business hours</description>
    <label>After Hours</label>
    <type>Checkbox</type>
</CustomField>