force-app/main/default/objects/Case/fields/NS_OfflineBusinessHrs__c.field-meta.xml
<CustomField>
    <fullName>NS_OfflineBusinessHrs__c</fullName>
    <formula>IF(
 NS_Off_Hours_CheckBox__c = true,
 IMAGE(&quot;/resource/NS_GrayIcon&quot;,&#39;Gray&#39;),
 NULL
)</formula>
    <label>Offline Business Hrs</label>
    <type>Text</type>
</CustomField>