force-app/main/default/objects/Case/fields/NS_OnsiteCount__c.field-meta.xml
<CustomField>
    <fullName>NS_OnsiteCount__c</fullName>
    <description>Field created as part of Phase 1 enhancement.</description>
    <inlineHelpText>Value should range from 0 to 9999</inlineHelpText>
    <label>Onsite Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>