force-app/main/default/objects/Case/fields/NS_Open_Tasks__c.field-meta.xml
<CustomField>
    <fullName>NS_Open_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should not be able to close a case if Case is having an open task.</description>
    <label>Open Tasks</label>
    <type>Checkbox</type>
</CustomField>