force-app/main/default/objects/Case/fields/NS_OperatingStation__c.field-meta.xml
<CustomField>
    <fullName>NS_OperatingStation__c</fullName>
    <formula>Account.NS_OperatingStation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operating Station</label>
    <type>Text</type>
</CustomField>