force-app/main/default/objects/Case/fields/NS_OperationsManagementContact__c.field-meta.xml
<CustomField>
    <fullName>NS_OperationsManagementContact__c</fullName>
    <description>This field captures the Agent contact</description>
    <label>Operations Management Contact</label>
    <length>200</length>
    <type>Text</type>
</CustomField>