force-app/main/default/objects/Case/fields/NS_OperationsManagementContact_old__c.field-meta.xml
<CustomField>
    <fullName>NS_OperationsManagementContact_old__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field has been replaced by NS_OperationsManagementContact__c Text(200) field.
To be deleted once confirmed by onshore.</description>
    <label>Operations Management Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases8</relationshipName>
    <type>Lookup</type>
</CustomField>