force-app/main/default/objects/Case/fields/NS_OriginalBillAmount__c.field-meta.xml
<CustomField>
    <fullName>NS_OriginalBillAmount__c</fullName>
    <label>Original Bill Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>