force-app/main/default/objects/Case/fields/NS_OriginalDateFreightPayerContacted__c.field-meta.xml
<CustomField>
    <fullName>NS_OriginalDateFreightPayerContacted__c</fullName>
    <label>Original Date Freight Payer Contacted</label>
    <type>Date</type>
</CustomField>