force-app/main/default/objects/Case/fields/NS_OriginalNotificationStation__c.field-meta.xml
<CustomField>
    <fullName>NS_OriginalNotificationStation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field created as part of Phase 1 enhancement.</description>
    <label>Original Notification Station</label>
    <referenceTo>NS_ServiceStations__c</referenceTo>
    <relationshipLabel>Cases (Original Notification Station)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>