force-app/main/default/objects/Case/fields/NS_OSS_VDN__c.field-meta.xml
<CustomField>
    <fullName>NS_OSS_VDN__c</fullName>
    <description>OSS support group&#39;s NS internal phone number for the account associated to the Case</description>
    <label>OSS-Account VDN</label>
    <type>Phone</type>
</CustomField>