force-app/main/default/objects/Case/fields/NS_OSSHandling__c.field-meta.xml
<CustomField>
    <fullName>NS_OSSHandling__c</fullName>
    <description>Field created as part of Phase 1 enhancement.</description>
    <label>OSS Handling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>