force-app/main/default/objects/Case/fields/NS_Outbound_Message_Status__c.field-meta.xml
<CustomField>
    <fullName>NS_Outbound_Message_Status__c</fullName>
    <label>Outbound Message Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>