force-app/main/default/objects/Case/fields/NS_Outbound_Msg_Workflow__c.field-meta.xml
<CustomField>
    <fullName>NS_Outbound_Msg_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marked TRUE if outbound message workflow has run</description>
    <label>Outbound Msg Workflow</label>
    <type>Checkbox</type>
</CustomField>