force-app/main/default/objects/Case/fields/NS_Owner_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>NS_Owner_Business_Unit__c</fullName>
    <label>Owner Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Equipment Planning</fullName>
            </value>
            <value>
                <fullName>OSS</fullName>
                <label>OS/CS</label>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Intermodal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>