force-app/main/default/objects/Case/fields/NS_Owner_Business_Unit_Top21__c.field-meta.xml
<CustomField>
    <fullName>NS_Owner_Business_Unit_Top21__c</fullName>
    <description>Business Units for Top 21</description>
    <label>Business Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Forest &amp; Consumer Products</fullName>
            </value>
            <value>
                <fullName>Intermodal</fullName>
            </value>
            <value>
                <fullName>Metals &amp; Construction</fullName>
            </value>
            <value>
                <fullName>Short Line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>