force-app/main/default/objects/Case/fields/NS_OwnerBusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>NS_OwnerBusinessUnit__c</fullName>
    <description>Captures the Case Owner Business Unit</description>
    <label>Owner Business Unit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Intermodal Premium</fullName>
            </value>
            <value>
                <fullName>Intermodal Non-Premium</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>OSS</fullName>
            </value>
            <value>
                <fullName>Revenue Accounting Traffic</fullName>
            </value>
            <value>
                <fullName>Revenue Accounting Demurrage</fullName>
            </value>
            <value>
                <fullName>Unit Train</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>