force-app/main/default/objects/Case/fields/NS_PACTICHD__c.field-meta.xml
<CustomField>
    <fullName>NS_PACTICHD__c</fullName>
    <label>PACT/ICHD Date</label>
    <type>Date</type>
</CustomField>