force-app/main/default/objects/Case/fields/NS_Parent__c.field-meta.xml
<CustomField>
    <fullName>NS_Parent__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Case/&quot; &amp; Parent.Id &amp; &quot;/view&quot;, Parent.CaseNumber)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Case Number</label>
    <type>Text</type>
</CustomField>