force-app/main/default/objects/Case/fields/NS_Parent_Case_Age__c.field-meta.xml
<CustomField>
    <fullName>NS_Parent_Case_Age__c</fullName>
    <formula>Parent.NS_CaseAgeInHours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Case Age  In Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>