force-app/main/default/objects/Case/fields/NS_Parent_Case_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>NS_Parent_Case_Assigned_To__c</fullName>
    <formula>Parent.NS_Case_Assignee_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Case Assigned To</label>
    <type>Text</type>
</CustomField>