force-app/main/default/objects/Case/fields/NS_Parent_Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>NS_Parent_Case_Origin__c</fullName>
    <formula>TEXT(Parent.Origin)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Case Origin</label>
    <type>Text</type>
</CustomField>