force-app/main/default/objects/Case/fields/NS_Parent_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>NS_Parent_Case_Owner__c</fullName>
    <description>To hold the owner of parent case in child case</description>
    <label>NS Parent Case Owner</label>
    <type>Email</type>
</CustomField>