force-app/main/default/objects/Case/fields/NS_ParentClosedDate__c.field-meta.xml
<CustomField>
    <fullName>NS_ParentClosedDate__c</fullName>
    <formula>Parent.ClosedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Case Closed Date/Time</label>
    <type>DateTime</type>
</CustomField>