force-app/main/default/objects/Case/fields/NS_ParentCurrentStatus__c.field-meta.xml
<CustomField>
    <fullName>NS_ParentCurrentStatus__c</fullName>
    <formula>CASE(Text( Parent.Status ),
&quot;NS_Closed&quot;, &quot;Closed&quot;, 
&quot;NS_Escalated&quot;, &quot;Escalated&quot;,
&quot;NS_New&quot;,&quot;New&quot;,
&quot;NS_Working&quot;,&quot;Working&quot;,
&quot;NS_AwaitingResponse&quot;,&quot;Awaiting Response&quot;,
&quot;NS_Cancelled&quot;,&quot;Cancelled&quot;,
&quot;NS_Reopened&quot;,&quot;Reopened&quot;,
Text( Parent.Status ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Case Current Status</label>
    <type>Text</type>
</CustomField>