force-app/main/default/objects/Case/fields/NS_ParentUserTimeofClose__c.field-meta.xml
<CustomField>
    <fullName>NS_ParentUserTimeofClose__c</fullName>
    <formula>Parent.NS_User_At_Time_of_Close__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Specialist at Time of Close</label>
    <type>Text</type>
</CustomField>