force-app/main/default/objects/Case/fields/NS_Permits__c.field-meta.xml
<CustomField>
    <fullName>NS_Permits__c</fullName>
    <label>Permits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>