force-app/main/default/objects/Case/fields/NS_Phone__c.field-meta.xml
<CustomField>
    <fullName>NS_Phone__c</fullName>
    <description>Phone number of the corresponding account.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>