force-app/main/default/objects/Case/fields/NS_Please_tell_us_why_Self_Service_Ease__c.field-meta.xml
<CustomField>
    <fullName>NS_Please_tell_us_why_Self_Service_Ease__c</fullName>
    <description>This field shows the value from survey result</description>
    <label>Please tell us why (Self Service Ease)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>