force-app/main/default/objects/Case/fields/NS_Previous_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>NS_Previous_Case_Owner__c</fullName>
    <description>Shows the previous case owner</description>
    <label>Previous Case Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>