force-app/main/default/objects/Case/fields/NS_PriorityReport__c.field-meta.xml
<CustomField>
    <fullName>NS_PriorityReport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority Report</label>
    <type>Checkbox</type>
</CustomField>