force-app/main/default/objects/Case/fields/NS_PriorityReportMovementPlan__c.field-meta.xml
<CustomField>
    <fullName>NS_PriorityReportMovementPlan__c</fullName>
    <label>Priority Report Movement Plan</label>
    <type>TextArea</type>
</CustomField>