force-app/main/default/objects/Case/fields/NS_Projected_Recovery__c.field-meta.xml
<CustomField>
    <fullName>NS_Projected_Recovery__c</fullName>
    <label>Projected Recovery</label>
    <type>DateTime</type>
</CustomField>