force-app/main/default/objects/Case/fields/NS_ProjectedSwitch__c.field-meta.xml
<CustomField>
    <fullName>NS_ProjectedSwitch__c</fullName>
    <label>Projected Switch Date/Time</label>
    <type>DateTime</type>
</CustomField>