force-app/main/default/objects/Case/fields/NS_Queue__c.field-meta.xml
<CustomField>
    <fullName>NS_Queue__c</fullName>
    <label>Queue</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NS_Owner_Business_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automotive - Empties</fullName>
            </value>
            <value>
                <fullName>Automotive - Loads</fullName>
            </value>
            <value>
                <fullName>Automotive - Parts</fullName>
            </value>
            <value>
                <fullName>Business Unit</fullName>
            </value>
            <value>
                <fullName>Clearances</fullName>
            </value>
            <value>
                <fullName>Data Quality (DQ)</fullName>
            </value>
            <value>
                <fullName>Demurrage</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>EP - Boxcars</fullName>
            </value>
            <value>
                <fullName>EP - Fleet Quality</fullName>
            </value>
            <value>
                <fullName>EP - Hoppers</fullName>
            </value>
            <value>
                <fullName>EP - Metals</fullName>
            </value>
            <value>
                <fullName>EP - Private Cars</fullName>
            </value>
            <value>
                <fullName>Freight Claims</fullName>
            </value>
            <value>
                <fullName>Functional Team</fullName>
            </value>
            <value>
                <fullName>Holiday Polling</fullName>
            </value>
            <value>
                <fullName>No Reply</fullName>
            </value>
            <value>
                <fullName>NS Bad Order</fullName>
            </value>
            <value>
                <fullName>NS Box Car</fullName>
            </value>
            <value>
                <fullName>NS Energy</fullName>
            </value>
            <value>
                <fullName>Operations NRE</fullName>
            </value>
            <value>
                <fullName>Operations NRW</fullName>
            </value>
            <value>
                <fullName>Operations SRE</fullName>
            </value>
            <value>
                <fullName>Operations SRW</fullName>
            </value>
            <value>
                <fullName>Revenue Protection (RP)</fullName>
            </value>
            <value>
                <fullName>Service Requests</fullName>
            </value>
            <value>
                <fullName>Transportation NRE</fullName>
            </value>
            <value>
                <fullName>UTS - Empty North</fullName>
            </value>
            <value>
                <fullName>UTS - Loaded North</fullName>
            </value>
            <value>
                <fullName>UTS - Loaded South</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>