force-app/main/default/objects/Case/fields/NS_RACFUserID__c.field-meta.xml
<CustomField>
    <fullName>NS_RACFUserID__c</fullName>
    <label>RACF/User ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>