force-app/main/default/objects/Case/fields/NS_RailcarNumbers__c.field-meta.xml
<CustomField>
    <fullName>NS_RailcarNumbers__c</fullName>
    <label>Railcar Number(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>