force-app/main/default/objects/Case/fields/NS_RailcarQuantity__c.field-meta.xml
<CustomField>
    <fullName>NS_RailcarQuantity__c</fullName>
    <label>Railcar Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>