force-app/main/default/objects/Case/fields/NS_Reason_for_Hold__c.field-meta.xml
<CustomField>
    <fullName>NS_Reason_for_Hold__c</fullName>
    <label>Reason for Hold</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LSS</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Shipper</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>