force-app/main/default/objects/Case/fields/NS_ReasonForError__c.field-meta.xml
<CustomField>
    <fullName>NS_ReasonForError__c</fullName>
    <label>Reason for Error</label>
    <type>TextArea</type>
</CustomField>