force-app/main/default/objects/Case/fields/NS_ReasonForReject__c.field-meta.xml
<CustomField>
    <fullName>NS_ReasonForReject__c</fullName>
    <label>Reason for Reject</label>
    <type>TextArea</type>
</CustomField>