force-app/main/default/objects/Case/fields/NS_RecentlyClosed__c.field-meta.xml
<CustomField>
    <fullName>NS_RecentlyClosed__c</fullName>
    <formula>(NOW()  - ClosedDate )* 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recently Closed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>