force-app/main/default/objects/Case/fields/NS_RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>NS_RecordTypeName__c</fullName>
    <description>This field is used to check Email to Case record type in a validation rule.</description>
    <formula>RecordType.Name</formula>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>