force-app/main/default/objects/Case/fields/NS_Region__c.field-meta.xml
<CustomField>
    <fullName>NS_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Northern Region East</fullName>
            </value>
            <value>
                <fullName>Northern Region West</fullName>
            </value>
            <value>
                <fullName>Southern Region East</fullName>
            </value>
            <value>
                <fullName>Southern Region West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>