force-app/main/default/objects/Case/fields/NS_RegisteredInUMLER__c.field-meta.xml
<CustomField>
    <fullName>NS_RegisteredInUMLER__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registered in UMLER?</label>
    <type>Checkbox</type>
</CustomField>