force-app/main/default/objects/Case/fields/NS_ReopenCounter__c.field-meta.xml
<CustomField>
    <fullName>NS_ReopenCounter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Reopen Counter</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>