force-app/main/default/objects/Case/fields/NS_ReopenDate__c.field-meta.xml
<CustomField>
    <fullName>NS_ReopenDate__c</fullName>
    <label>Date/Time Reopened</label>
    <type>DateTime</type>
</CustomField>