force-app/main/default/objects/Case/fields/NS_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>NS_Request_Type__c</fullName>
    <formula>NS_RecordTypeName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Type</label>
    <type>Text</type>
</CustomField>