force-app/main/default/objects/Case/fields/NS_RequestProblemReason__c.field-meta.xml
<CustomField>
    <fullName>NS_RequestProblemReason__c</fullName>
    <description>Field created as part of Phase 1 enhancement.</description>
    <label>Request/Problem Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Car Found In Yard</fullName>
            </value>
            <value>
                <fullName>Delayed Interchange Reporting</fullName>
            </value>
            <value>
                <fullName>Delayed Train Reporting</fullName>
            </value>
            <value>
                <fullName>Local Crew Reporting Issue</fullName>
            </value>
            <value>
                <fullName>OSS Reporting Error</fullName>
            </value>
            <value>
                <fullName>Train Reported Incorrectly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>