force-app/main/default/objects/Case/fields/NS_Reservation_Number__c.field-meta.xml
<CustomField>
    <fullName>NS_Reservation_Number__c</fullName>
    <label>Reservation Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>