force-app/main/default/objects/Case/fields/NS_RetainCaseOwnership__c.field-meta.xml
<CustomField>
    <fullName>NS_RetainCaseOwnership__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The checkbox for an agent, if checked the agent will retain the ownership for the particular case else not.</description>
    <label>Retain Case</label>
    <type>Checkbox</type>
</CustomField>