force-app/main/default/objects/Case/fields/NS_Revert_to_Paperwork__c.field-meta.xml
<CustomField>
    <fullName>NS_Revert_to_Paperwork__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Built as part of Phase 1 enhancement</description>
    <label>Revert to Paperwork</label>
    <type>Checkbox</type>
</CustomField>