force-app/main/default/objects/Case/fields/NS_ReweighGross__c.field-meta.xml
<CustomField>
    <fullName>NS_ReweighGross__c</fullName>
    <label>Reweigh Gross</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>