force-app/main/default/objects/Case/fields/NS_ScannerConsistRequested__c.field-meta.xml
<CustomField>
    <fullName>NS_ScannerConsistRequested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scanner Consist Requested</label>
    <type>Checkbox</type>
</CustomField>