force-app/main/default/objects/Case/fields/NS_Self_Service_Tools_are_easy_to_use__c.field-meta.xml
<CustomField>
    <fullName>NS_Self_Service_Tools_are_easy_to_use__c</fullName>
    <description>This field shows the value from Survey Result</description>
    <label>NS Self-Service Tools are easy to use.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>