force-app/main/default/objects/Case/fields/NS_SetbackAuthorizedDateTime__c.field-meta.xml
<CustomField>
    <fullName>NS_SetbackAuthorizedDateTime__c</fullName>
    <description>This field captures the set back authorized date</description>
    <label>Setback Authorized</label>
    <type>DateTime</type>
</CustomField>