force-app/main/default/objects/Case/fields/NS_Shipment_Destination__c.field-meta.xml
<CustomField>
    <fullName>NS_Shipment_Destination__c</fullName>
    <label>Shipment Destination</label>
    <length>30</length>
    <type>Text</type>
</CustomField>