force-app/main/default/objects/Case/fields/NS_ShipperContacted__c.field-meta.xml
<CustomField>
    <fullName>NS_ShipperContacted__c</fullName>
    <description>this field describes the date/time when the shipper contacted</description>
    <label>Shipper Contacted</label>
    <type>DateTime</type>
</CustomField>