force-app/main/default/objects/Case/fields/NS_ShipperContactName__c.field-meta.xml
<CustomField>
    <fullName>NS_ShipperContactName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipper Contact Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.NS_ContactStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Shipper Contact Name)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>