force-app/main/default/objects/Case/fields/NS_Shutdown__c.field-meta.xml
<CustomField>
    <fullName>NS_Shutdown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shutdown</label>
    <type>Checkbox</type>
</CustomField>