force-app/main/default/objects/Case/fields/NS_Single_Location__c.field-meta.xml
<CustomField>
    <fullName>NS_Single_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Single Location</label>
    <type>Checkbox</type>
</CustomField>