force-app/main/default/objects/Case/fields/NS_SIRSIncidentNumber__c.field-meta.xml
<CustomField>
    <fullName>NS_SIRSIncidentNumber__c</fullName>
    <label>SIRS Incident Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>