force-app/main/default/objects/Case/fields/NS_SortingOrder__c.field-meta.xml
<CustomField>
    <fullName>NS_SortingOrder__c</fullName>
    <description>This is a hidden field to display the sorting order for case records.</description>
    <label>Sorting Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>