force-app/main/default/objects/Case/fields/NS_Specialist_met_my_expectations__c.field-meta.xml
<CustomField>
    <fullName>NS_Specialist_met_my_expectations__c</fullName>
    <label>CS Specialist met my expectations</label>
    <length>50</length>
    <type>Text</type>
</CustomField>